test/self/self_in_top_level_function.lox
fn foo() {
  self // error: can't use 'self' outside of a structure
}
